--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,7 @@
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-compat</artifactId>
       <version>${maven.version}</version>
-      <scope>provided</scope>
+      <scope>test</scope> <!-- Don't let this dependency leak old classes to the main code -->
     </dependency>
     <dependency>
       <groupId>org.apache.maven.plugin-tools</groupId>
